--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rampurhat One</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./src/index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rampurhat One</title>
+</head>
+<body>
+  <h1 style="text-align:center;">Rampurhat One</h1>
+  <p style="text-align:center;">Your local superapp</p>
+  <div style="text-align:center; margin-top:20px;">
+    <button onclick="location.href='signup-customer.html'">Create account as Customer</button><br><br>
+    <button onclick="location.href='signup-merchant.html'">Create account as Merchant</button><br><br>
+    <button onclick="location.href='login.html'">Already a user? Login</button>
+  </div>
+</body>
 </html>
