--- a/feed.html
+++ b/feed.html
@@ -1,27 +1,54 @@
-<script type="module">
-  import { db, getDocs, collection } from './firebase.js';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Feed</title>
+</head>
+<body>
+  <h1 style="text-align:center;">Feed</h1>
+  <div style="text-align:center;">
+    <input type="text" placeholder="Search..." style="width:80%; padding:5px;"><br><br>
+  </div>
 
-  const feedContainer = document.getElementById('feedContainer');
+  <div id="categories" style="display:grid; grid-template-columns:1fr 1fr; gap:10px; width:90%; margin:auto;">
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Food & Grocery</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Local Shops</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Services</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Repair</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Healthcare</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Education</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Beauty & Wellness</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Artists</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Events</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Transport</div>
+    <div style="border:1px solid #000; padding:10px; text-align:center;">Courier</div>
+  </div>
 
-  async function loadItems() {
-    const querySnapshot = await getDocs(collection(db, "items"));
-    const container = document.getElementById("feedItems");
-    container.innerHTML = ""; // clear
+  <h2 style="text-align:center; margin-top:20px;">Items from Merchants</h2>
+  <div id="feedItems" style="display:grid; grid-template-columns:1fr 1fr; gap:10px; width:90%; margin:auto;">
+    <!-- Items will be loaded here -->
+  </div>
 
-    querySnapshot.forEach(doc => {
-      const data = doc.data();
-      const div = document.createElement("div");
-      div.style.border = "1px solid #000";
-      div.style.padding = "10px";
-      div.style.textAlign = "center";
-      div.innerHTML = `<b>${data.name}</b><br>Price: ₹${data.price}`;
-      container.appendChild(div);
+  <script type="module">
+    import { db, collection, onSnapshot } from './firebase.js';
+
+    const feedContainer = document.getElementById('feedItems');
+
+    // Live update from Firestore
+    const itemsQuery = collection(db, "items");
+    onSnapshot(itemsQuery, (snapshot) => {
+      feedContainer.innerHTML = "";
+      snapshot.forEach(docSnap => {
+        const data = docSnap.data();
+        const div = document.createElement("div");
+        div.style.border = "1px solid #000";
+        div.style.padding = "10px";
+        div.style.textAlign = "center";
+        div.innerHTML = `<b>${data.name}</b><br>Price: ₹${data.price}`;
+        feedContainer.appendChild(div);
+      });
     });
-  }
-
-  loadItems();
-</script>
-
-<div id="feedItems" style="display:grid; grid-template-columns:1fr 1fr; gap:10px; width:90%; margin:auto; margin-top:20px;">
-  <!-- Items will be loaded here -->
-</div>
+  </script>
+</body>
+</html>
