--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BizConnect</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <script>
-    // Global error tracker
-    window.onerror = function(message, source, lineno, colno, error) {
-      alert("Error: " + message + "\nSource: " + source + "\nLine: " + lineno);
-    };
-  </script>
+  <title>Marketplace</title>
+  <link href="style.css" rel="stylesheet">
+  <script src="firebase.js" defer></script>
 </head>
 <body>
   <div class="container">
-    <h1 class="app-title">BizConnect</h1>
-    <p class="tagline">Connecting Customers & Merchants Seamlessly</p>
+    <h1 class="title">🛍️ My Marketplace</h1>
+    <p class="subtitle">Buy, Sell & Connect</p>
 
     <div class="button-group">
-      <button onclick="location.href='signup-customer.html'" class="btn primary">I’m a Customer</button>
-      <button onclick="location.href='signup-merchant.html'" class="btn secondary">I’m a Merchant</button>
-      <button onclick="location.href='login.html'" class="btn outline">Login</button>
+      <button onclick="location.href='signup-customer.html'" class="btn primary">Sign Up as Customer</button>
+      <button onclick="location.href='signup-merchant.html'" class="btn secondary">Sign Up as Merchant</button>
+      <button onclick="location.href='login.html'" class="btn dark">Login</button>
     </div>
 
     <footer>
-      <p>📍 Kolkata, India</p>
-      <p class="small">Built with ❤️ on Firebase & GitHub</p>
+      <p class="footer-text">📍 Your City, India</p>
+      <p class="footer-tagline">Connecting people & businesses with ease</p>
     </footer>
   </div>
+
+  <script>
+    window.onerror = function(message, source, lineno, colno, error) {
+      alert("Error in file: " + source + "\nLine: " + lineno + "\nMessage: " + message);
+    };
+  </script>
 </body>
 </html>
