--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marketplace</title>
   <link href="style.css" rel="stylesheet">
-  <script src="firebase.js" defer></script>
+  <!-- Firebase setup -->
+<script src="firebase.js"></script>
 </head>
 <body>
   <div class="container">
